@@ -359,6 +359,8 @@ Release 2.4.1 - UNRELEASED
     HDFS-6209. TestValidateConfigurationSettings should use random ports.
     (Arpit Agarwal via szetszwo) 
 
+    HDFS-6208. DataNode caching can leak file descriptors. (cnauroth)
+
 Release 2.4.0 - 2014-04-07 
 
   INCOMPATIBLE CHANGES
